@@ -1,6 +1,7 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.13'
+    id 'com.github.johnrengelman.shadow' version '7.0.0' // Plugin untuk membuat fat JAR
 }
 
 repositories {
@@ -10,7 +11,7 @@ repositories {
 dependencies {
     implementation 'org.openjfx:javafx-controls:17'
     implementation 'org.openjfx:javafx-fxml:17'
-    implementation 'org.xerial:sqlite-jdbc:3.36.0.3' // SQLite
+    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
     implementation 'org.apache.poi:poi:5.2.5'
     implementation 'org.apache.poi:poi-ooxml:5.2.5'
     implementation 'com.itextpdf:itextpdf:5.5.13.3'
@@ -25,9 +26,19 @@ application {
     mainClass = 'com.zakatfitrah.App'
 }
 
-run {
-    jvmArgs = ['--module-path', 'path/to/javafx-sdk-17/lib', '--add-modules', 'javafx.controls,javafx.fxml']
+shadowJar {
+    archiveBaseName.set('zakatfitrah-app')
+    archiveVersion.set('1.0.0')
+    archiveClassifier.set('all') // Menambahkan "-all" di nama file JAR
+    manifest {
+        attributes 'Main-Class': 'com.zakatfitrah.App'
+    }
+    dependencies {
+        include(dependency('org.openjfx:javafx-controls:17'))
+        include(dependency('org.openjfx:javafx-fxml:17'))
+    }
 }
+
 
 jar {
     from sourceSets.main.resources
